Bug 395225 - Incorrect input of large unsigned int values (>0x7FFFFFFF)
Summary: Incorrect input of large unsigned int values (>0x7FFFFFFF)
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Tables (other bugs)
Version First Reported In: 3.1.0
Platform: Other Linux
: HI normal
Target Milestone: ---
Assignee: Jarosław Staniek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-06-10 21:11 UTC by Jarosław Staniek
Modified: 2023-09-03 20:48 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2018-06-10 21:11:12 UTC
Input of large unsigned int values (>0x7FFFFFFF) is incorrect. 

Reason is, QIntValidator is not for unsigned ints. Use KDbLongLongValidator.
Comment 1 Jarosław Staniek 2018-06-10 21:14:18 UTC
Test: use attachment https://bugs.kde.org/show_bug.cgi?id=394913#c1.
Try to enter value 2147483648 (0x80000000) for unsigned integer column.
Expected: value can be entered.
Comment 2 Jarosław Staniek 2018-06-15 21:14:24 UTC
Git commit 16076668cb67b174c734f9eee3a974689a186a1a by Jaroslaw Staniek.
Committed on 15/06/2018 at 21:14.
Pushed by staniek into branch '3.1'.

Fix validation of values in default input box of table view

Summary:
FIXED-IN:3.1.1

Test Plan: See https://bugs.kde.org/show_bug.cgi?id=395225#c1

Reviewers: piggz

Reviewed By: piggz

Subscribers: Kexi-Devel-list

Tags: #kexi

Differential Revision: https://phabricator.kde.org/D13473

M  +6    -0    src/widget/tableview/kexiinputtableedit.cpp
M  +3    -0    src/widget/tableview/kexiinputtableedit.h

https://commits.kde.org/kexi/16076668cb67b174c734f9eee3a974689a186a1a
Comment 3 Jarosław Staniek 2018-06-15 21:17:02 UTC
Git commit 3b007ac8259b2b0edc6268d57fdc24e9ee2bcd94 by Jaroslaw Staniek.
Committed on 15/06/2018 at 21:16.
Pushed by staniek into branch '3.1'.

Fix input of large unsigned int values (>0x7FFFFFFF)

Summary:
FIXED-IN:3.1.1

Test Plan: Build this code but test parent: D13473

Reviewers: piggz

Reviewed By: piggz

Subscribers: Kexi-Devel-list

Tags: #kdb

Differential Revision: https://phabricator.kde.org/D13472

M  +1    -0    src/tools/KDbFieldValidator.cpp
M  +2    -2    src/tools/KDbLongLongValidator.cpp

https://commits.kde.org/kdb/3b007ac8259b2b0edc6268d57fdc24e9ee2bcd94