Fix validation of values in default input box of table view

Summary:
BUG:395225
FIXED-IN:3.1.1

Test Plan: See https://bugs.kde.org/show_bug.cgi?id=395225#c1

Reviewers: piggz

Reviewed By: piggz

Subscribers: Kexi-Devel-list

Tags: #kexi

Differential Revision: https://phabricator.kde.org/D13473